--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "predeploy": "npm run build",
-  "deploy": "gh-pages -d build"
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": [
@@ -42,6 +42,7 @@
   },
   "devDependencies": {
     "gh-pages": "^3.2.3",
+    "mini-css-extract-plugin": "2.4.5",
     "react-redux": "^7.2.6",
     "redux": "^4.1.2"
   }
